--- a/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
+++ b/src/@lekoarts/gatsby-theme-minimal-blog/texts/hero.mdx
@@ -2,4 +2,4 @@
   Hi.
 </Text>
 
-I'm LekoArts, a designer turned software engineer passionate about open source & teaching. Learn more about Gatsby & React on [my website](https://www.lekoarts.de?utm_source=minimal-blog&utm_medium=Starter).
+I'm Joseph, a Technical Trainer that helps employees become more productive. I like to read as much as I can and write about what I've learned.
